--- a/_data/social.yml
+++ b/_data/social.yml
@@ -27,7 +27,7 @@ youtube:          # Youtube channel token like: UCqECaJ8Gagnn7YCbPEzWH6g
 share:
   facebook: true
   twitter: true
-  tumblr:
+  tumblr: true
   pinterest:
   pocket:
   reddit: true
