--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE CONFIGURATION
 baseurl: ""
-url: ""
+url: "http://whizzplorers.com/"
 
 # THEME-SPECIFIC CONFIGURATION
 title: Whizzplorers                                   # site's title
